--- a/google.sprite.css
+++ b/google.sprite.css
@@ -7,13 +7,14 @@
 	background-image: url('google.sprite.png?v=wnW7weU4FBLECzTDwL2k5Hdh2Pa5E7yERTGz2');
 	background-repeat: no-repeat;
 	display: inline-block;
+	background-size: 528px 68px;
 }
 
 .google.i1_1967ca6a {
 	width: 35px;
-    height: 35px;
-	background-position: -132px -38px;
-	opacity: .55;
+    height: 12px;
+    background-position: -129px -31px;
+    opacity: .55;
 }
 
 .google.i1_1967ca6a:hover {
