--- a/style.css
+++ b/style.css
@@ -3,27 +3,92 @@ a {
     text-decoration: none;
     color: #000;
     text-align: middle;
-    padding: 15px;
+    padding: 12px;
+    font-size: 13px;
+}
+.navbar {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    position: absolute;
+    width: 100%;
+}
+a:hover{
+    text-decoration: underline
 }
 .right {
     float: right;
 }
 .left {
     float: left;
+    padding: 14px;
 }
-
-}
-#navbar {
-    padding: 10px;
-    display: inline-block;
-}
-
-
 .button {
-    padding: 10px 15px;
-    margin: 10px;
+    padding: 7px 12px;
     background: #4387fd;
-    border-radius: 4px;
+    border-radius: 2px;
     color: #fff;
+    margin-top: 10px;
+    margin-right: 20px;
+    font-weight: bold;
+    cursor: default;
+}
+.button:hover{
+    text-decoration: none;
+}
+.doodle {
+    padding-top: 15%;
+    text-align: center;
+}
+.form{
+    width: 484px;
+    position: relative;
+    height: 30px;
+    align-items: center;
+    display: block;
+    margin: 20px auto;
+    background: transparent;
+    font-size: 16px;
+    border-radius: 2px;
+}
+#mic {
+    position: relative;
+    display: block;
+    top: -51px;
+    left: 226px;
+    width: 25px;
+    height: 25px;
+}
+#sbuttons {
+    text-align: center;
+}
+.search {
+    color: #757575;
+    background-color: #f2f2f2;
+    text-align: center;
+    font-weight: bold;
+    font-size: 13px;
+    border-radius: 2px;
+    padding: 0px 16px;
+    line-height: 27px;
+    margin: 14px 11px;
+    min-width: 54px;
+}
+.search:hover{
+    color: #222;
+}
+.footer{
+    height: 45px;
+    position: absolute;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    background-color: #f2f2f2;
+    border: 1px solid ##e4e4e4;
+    border-radius: 2px;
+    display: block;
+    bottom: 0;
+}
 
+.rb{
+    padding: 14px;
 }
