--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ a:hover{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 10pt;
     background-color: #f2f2f2;
-    border: 1px solid ##e4e4e4;
+    border: 1px solid #e4e4e4;
     border-radius: 2px;
     display: block;
     bottom: 0;
