--- a/style2.css
+++ b/style2.css
@@ -170,3 +170,20 @@ cite {
 .fa-caret-down {
     margin-left: 5px;
 }
+h4 {
+    color: #222;
+    font-size: 18px;
+    font-weight: normal;
+}
+#related {
+    column-count: 2;
+    column-width: 400px;
+    display: list-item;
+    list-style: none;
+    padding-bottom: 5px;
+    column-width: auto;
+}
+.related {
+    font-weight: bold;
+    font-size: 14px;
+}
