--- a/style2.css
+++ b/style2.css
@@ -203,6 +203,13 @@ h4 {
 #G {
     cursor: default;
 }
+#first {
+    color: black;
+    text-decoration: none;
+}
+#first:hover {
+    text-decoration: none;
+}
 .td{
     width: 30px;
     text-align: center;
@@ -211,6 +218,7 @@ h4 {
 }
 .td:hover{
     text-decoration: underline;
+    color: #4285f4
 }
 .ooospan{
     position: relative;
@@ -225,4 +233,24 @@ h4 {
 #pagesend {
     text-align: right;
     color: #4285f4;
+}
+.footer {
+    position: absolute;
+    top: 1150px;
+    width: 100%;
+    background: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+    line-height: 40px;
+    display: block;
+    white-space: nowrap;
+    margin-left: ;
+}
+.footertext {
+    position: relative;
+    margin-left: 115px;
+}
+.footertext a {
+    font-size: 12px;
+    padding-left: 30px;
+    color: #5f6368;
 }
